--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
     "compilerOptions": {
         "target": "es6",
         "outDir": "app/js",
-        "noEmitOnError": true,
-        "noImplicitAny": true
+        "noEmitOnError": true, 
+        "noImplicitAny": true,
+        "removeComments": true        
     },
     "include": [
         "app/ts/**/*"
